--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TiyaponActivity"></activity>
+        <activity android:name=".SikharetActivity"></activity>
+        <activity android:name=".TiyaponActivity" />
         <activity android:name=".PornsilActivity" />
         <activity android:name=".PrompatActivity" />
         <activity android:name=".MainActivity">
